src/objects/Operator_Program__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Fees__c</fullName>
        <label>Additional Pricing Considerations</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Days_notice_required_before_auto_renew__c</fullName>
        <label>Days notice required before auto-renew</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domestic_Booking_Notice__c</fullName>
        <label>Domestic Booking Notice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <label>Expiration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Availability__c</fullName>
        <label>Guaranteed Availability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Important_to_Discuss_with_Client__c</fullName>
        <label>Important to Discuss with Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incentives_to_Negotiate__c</fullName>
        <label>Incentives to Negotiate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_l_Booking_Notice_Includes_AK_HI__c</fullName>
        <label>Int&apos;l Booking Notice - Includes AK HI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Int_l_Cancellation_Terms__c</fullName>
        <label>Int&apos;l Cancellation Terms - inc. AK HI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Deposit_Required__c</fullName>
        <label>Minimum Deposit Required</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Peak_Base_Hourly_King_Air__c</fullName>
        <label>Non- Peak Base Hourly - King Air</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Peak_Base_Hourly_Light_Cabin__c</fullName>
        <label>Non-Peak Base Hourly  - Light Cabin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Peak_Base_Hourly_Mid_Cabin__c</fullName>
        <label>Non-Peak Base Hourly- Mid Cabin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Peak_Base_Hourly_Super_Mid__c</fullName>
        <label>Non-Peak Base Hourly- Super Mid</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operator Programs</relationshipLabel>
        <relationshipName>Operator_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Program_Notes__c</fullName>
        <label>Other Program Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Booking_Notice__c</fullName>
        <label>Peak Booking Notice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Cancellation_Terms__c</fullName>
        <label>Peak Cancellation Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Day_Departure_Move__c</fullName>
        <label>Peak Day Departure Move</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Premium__c</fullName>
        <label>Peak Premium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Restrictions__c</fullName>
        <label>Peak Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <label>Program Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refundability__c</fullName>
        <label>Refundability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Cancellation_Terms__c</fullName>
        <label>Standard Cancellation Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Upgrades_and_Downgrades__c</fullName>
        <label>Upgrades and Downgrades</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Hours__c</fullName>
        <label># of Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Peak_Days_Next_Month__c</fullName>
        <label># of Peak Days Next Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Peak_Days_del__c</fullName>
        <label># of Peak Days</label>
        <summaryFilterItems>
            <field>Peak_Days__c.Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Peak_Days__c.Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Peak_Days__c.Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>Peak Day</value>
        </summaryFilterItems>
        <summaryForeignKey>Peak_Days__c.Operator_Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Operator Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Operator Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operator Programs</pluralLabel>
    <recordTypes>
        <fullName>Charter</fullName>
        <active>true</active>
        <label>Charter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fractional</fullName>
        <active>true</active>
        <label>Fractional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guaranteed_Program</fullName>
        <active>true</active>
        <label>Guaranteed Program</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>